// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is possible to use Text component with child 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  VOID
</Text>
`;

exports[`is possible to use Text component with custom styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  VOID
</Text>
`;

exports[`is possible to use Text component without children 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
/>
`;
